--- a/mandelbulber2/qt/material_editor.ui
+++ b/mandelbulber2/qt/material_editor.ui
@@ -52,6 +52,19 @@
        </property>
       </widget>
      </item>
+     <item>
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
     </layout>
    </item>
    <item>
@@ -4435,11 +4448,6 @@ object size)</string>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>MyDoubleSpinBox</class>
-   <extends>QDoubleSpinBox</extends>
-   <header>my_double_spin_box.h</header>
-  </customwidget>
-  <customwidget>
    <class>MyGroupBox</class>
    <extends>QGroupBox</extends>
    <header>my_group_box.h</header>
@@ -4461,16 +4469,6 @@ object size)</string>
    <header>my_line_edit.h</header>
   </customwidget>
   <customwidget>
-   <class>MyColorButton</class>
-   <extends>QWidget</extends>
-   <header>my_color_button.h</header>
-  </customwidget>
-  <customwidget>
-   <class>FileSelectWidget</class>
-   <extends>QWidget</extends>
-   <header>file_select_widget.h</header>
-  </customwidget>
-  <customwidget>
    <class>cButtonLoadSettingsFromWidget</class>
    <extends>QPushButton</extends>
    <header>buton_load_settings_from_widget.h</header>
@@ -4486,6 +4484,26 @@ object size)</string>
    <header>buton_reset_settings_from_widget.h</header>
   </customwidget>
   <customwidget>
+   <class>MyComboBox</class>
+   <extends>QComboBox</extends>
+   <header>my_combo_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MyDoubleSpinBox</class>
+   <extends>QDoubleSpinBox</extends>
+   <header>my_double_spin_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MyColorButton</class>
+   <extends>QWidget</extends>
+   <header>my_color_button.h</header>
+  </customwidget>
+  <customwidget>
+   <class>FileSelectWidget</class>
+   <extends>QWidget</extends>
+   <header>file_select_widget.h</header>
+  </customwidget>
+  <customwidget>
    <class>ColorPaletteWidget</class>
    <extends>QWidget</extends>
    <header>color_palette_widget.h</header>
@@ -4496,11 +4514,6 @@ object size)</string>
    <extends>QWidget</extends>
    <header>material_widget.h</header>
    <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>MyComboBox</class>
-   <extends>QComboBox</extends>
-   <header>my_combo_box.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
